# Pong-SFML

./: CMakeLists.txt  Main.cpp  README.md
Header/Core/: GameLoop.h  GameWindowManger.h
Header/Event/: EventManager.h
Header/Gameplay/: Ball.h  Boundary.h  GameplayManager.h  Paddle.h
Header/Sound/: SoundManager.h
Header/UI/: UIService.h
Header/Utility/: TimeService.h
Source/Core/: GameLoop.cpp  GameWindowManager.cpp
Source/Event/: EventManager.cpp
Source/Gameplay/: Ball.cpp  Boundary.cpp  GameplayManager.cpp  Paddle.cpp
Source/Sound/: SoundManager.cpp
Source/UI/: UIService.cpp
Source/Utility/: TimeService.cpp
